--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+<!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <h1>Hello World!</h1>
 <h2>Texto qualquer.</h2>
-<button>
+<button class="btn btn-primary">
   Cadastra-se
 </button>
 <hr>
-<button>
+<button class="btn btn-primary">
 Já tenho uma conta
 </button>
