ateração do botão para vermelho

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 <button class="btn btn-danger">
 Já tenho uma conta
 </button>
+
+<button class="btn btn-sucess">
+  Criar conta
+</button>
 </body>
 </html>
 
