Adcionei novo butão verde

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 Já tenho uma conta
 </button>
 
-<button class="btn btn-sucess">
+<button class="btn btn-success">
   Criar conta
 </button>
 </body>
